--- a/nginx/nginx-setup.conf
+++ b/nginx/nginx-setup.conf
@@ -7,8 +7,8 @@ server {
     listen 8081;
     server_name localhost;
 
-    location /staticfile/ {
-        alias backend/staticfile/;
+    location /static/ {
+        alias /backend/static/;
     }
 
     location /admin/ {
@@ -17,9 +17,12 @@ server {
     }
 
     location / {
-        proxy_pass http://backend/;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
+        proxy_pass http://backend;
+        proxy_set_header X-Forward-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Host $server_name;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_redirect off;
     }
 }
