--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,8 @@ django
 djangorestframework
 django-ninja
 djangorestframework-simplejwt
+django-extensions
+drf-yasg
 
 libsass 
 django-compressor 
