--- a/nginx/nginx-setup.conf
+++ b/nginx/nginx-setup.conf
@@ -7,10 +7,6 @@ server {
     listen 8081;
     server_name localhost;
 
-    location /static/ {
-        alias /backend/static/;
-    }
-
     location /admin/ {
         proxy_pass http://backend/admin/;
         proxy_set_header Host $host;
@@ -24,5 +20,9 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_redirect off;
+    }
+
+    location /static/ {
+        alias /backend/config/static/;
     }
 }
